// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`different tag types matches snapshot - error 1`] = `
<DocumentFragment>
  <div
    class="container error"
  >
    <span
      class="text"
    >
      error message
    </span>
  </div>
</DocumentFragment>
`;

exports[`different tag types matches snapshot - info 1`] = `
<DocumentFragment>
  <div
    class="container info"
  >
    <span
      class="text"
    >
      info message
    </span>
  </div>
</DocumentFragment>
`;

exports[`different tag types matches snapshot - success 1`] = `
<DocumentFragment>
  <div
    class="container success"
  >
    <span
      class="text"
    >
      success message
    </span>
  </div>
</DocumentFragment>
`;

exports[`different tag types matches snapshot - warning 1`] = `
<DocumentFragment>
  <div
    class="container warning"
  >
    <span
      class="text"
    >
      warning message
    </span>
  </div>
</DocumentFragment>
`;